# structopt-utilities

./: Cargo.toml  README.md
.github/workflows/: test.yaml
src/: lib.rs  traits.rs
src/completions/: exec.rs  mod.rs  new.rs  shell.rs
